@@ -1,5 +1,6 @@
 name = "spark-connector"
 title = "MongoDB Spark Connector"
+eol = true
 
 intersphinx = ["https://www.mongodb.com/docs/manual/objects.inv"]
 
@@ -25,3 +26,12 @@ spark-sql-version = "3.3.1"
 [substitutions]
 copy = "unicode:: U+000A9"
 ent-build = "MongoDB Enterprise"
+
+[[banners]]
+targets = ["*"]
+variant = "info"
+value = """\
+    This version of the documentation is archived and no longer supported. View the \
+    `current documentation <https://www.mongodb.com/docs/spark-connector/current/>`__ to \
+    learn how to `install supported versions of the {+product+} <https://www.mongodb.com/docs/spark-connector/current/get-started/>`__.\
+    """
