@@ -1,3 +1,6 @@
+.. meta::
+   :robots: noindex, nosnippet 
+
 ========================================
 Getting Started with the {+connector-short+}
 ========================================
