@@ -1,3 +1,6 @@
+.. meta::
+   :robots: noindex, nosnippet 
+
 .. _spark-streaming-read-conf:
 
 ====================================
